Cleaned data in CS tix via replacing tag_1 to tag_8 variables to numeric data. Clustered all data, but was not satisfied with the results. TBC.

--- a/Notebooks/Linear Regression - SAT_scores.ipynb
+++ b/Notebooks/Linear Regression - SAT_scores.ipynb
@@ -877,6 +877,14 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rober\\AppData\\Local\\Temp\\ipykernel_31844\\4150143804.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  sat['part_time_job'] = sat['part_time_job'].replace({'Yes': 1, 'No': 0})\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.microsoft.datawrangler.viewer.v0+json": {
        "columns": [
@@ -920,9 +928,6 @@
     }
    ],
    "source": [
-    "# Convert 'part_time_job' to numerical categories and set type to int64\n",
-    "sat['part_time_job'] = sat['part_time_job'].replace({'Yes': 1, 'No': 0})\n",
-    "sat['part_time_job'] = sat['part_time_job'].astype('int64')\n",
     "sat['part_time_job'].value_counts()"
    ]
   },
@@ -1568,19 +1573,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "# Bin ages into 5 groups and plot SAT scores by age bin using a boxplot\n",
-    "age_bins = pd.cut(sat['age'], bins=5)\n",
-    "plt.figure(figsize=(12,6))\n",
-    "sns.boxplot(x=age_bins, y=sat['exam_score'], palette='viridis')\n",
-    "plt.xlabel('Age Group (Binned)', fontsize=12)\n",
-    "plt.ylabel('SAT Exam Score', fontsize=12)\n",
-    "plt.title('SAT Scores by Age Group', fontsize=14, fontweight='bold')\n",
-    "plt.xticks(rotation=45)\n",
-    "plt.grid(axis='y', alpha=0.3)\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1865,39 +1858,6 @@
     "#calculate R² score and RMSE pre prediction\n",
     "print ('R²: ', r2_score(y_test, y_test_pred))\n",
     "print ('RMSE: ', mean_squared_error(y_test, y_test_pred))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Top 10 Most Important Features (Multiple Linear Regression):\n",
-      "                          Feature  Coefficient  Abs_Coefficient\n",
-      "2             study_hours_per_day     9.541963         9.541963\n",
-      "3              social_media_hours    -2.704224         2.704224\n",
-      "4                   netflix_hours    -2.316685         2.316685\n",
-      "7                     sleep_hours     1.984384         1.984384\n",
-      "12           mental_health_rating     1.953494         1.953494\n",
-      "9              exercise_frequency     1.317249         1.317249\n",
-      "5                   part_time_job     0.395880         0.395880\n",
-      "8                    diet_quality    -0.323219         0.323219\n",
-      "13  extracurricular_participation    -0.163654         0.163654\n",
-      "6           attendance_percentage     0.145140         0.145140\n"
-     ]
-    }
-   ],
-   "source": [
-    "# List the top 10 most important features from multiple linear regression results\n",
-    "mlr_coefs = model.coef_\n",
-    "mlr_feature_importance = pd.DataFrame({'Feature': X.columns, 'Coefficient': mlr_coefs, 'Abs_Coefficient': np.abs(mlr_coefs)})\n",
-    "mlr_feature_importance = mlr_feature_importance.sort_values('Abs_Coefficient', ascending=False)\n",
-    "print('Top 10 Most Important Features (Multiple Linear Regression):')\n",
-    "print(mlr_feature_importance.head(10))"
    ]
   },
   {
